correctly align toggles/change some styles on modal forms

--- a/albearth.css
+++ b/albearth.css
@@ -320,3 +320,15 @@ div.gmnoprint:nth-child(11) {
   .toggler.round:before {
 	border-radius: 50%;
   }
+  
+ .form-control:focus {
+  border-color: orange !important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 16px rgba(255, 165, 0, 0.6) !important;
+}
+
+.custom-input{
+	width: initial !important;
+	height: 30px !important;
+	padding: 0 !important;
+	padding-left: 2px !important;
+}
